--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,16 +21,15 @@ classifiers = [
 ]
 dependencies = [
     "findiff>=0.11.1",
-    "pynxtools>=0.11.0",
-    # "pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git@master#egg=pynxtools",
+    # "pynxtools>=0.11.0",
+    "pynxtools @ git+https://github.com/FAIRmat-NFDI/pynxtools.git@newVersionSPM#egg=pynxtools",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "pint",
     "xarray",
     "matplotlib",
     "scipy",
     "hvplot",
-    "spym",
-    "zoneinfo",
+    "spym>=0.9.2",
     "tzlocal",
 ]
 
