--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/sts.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/sts.scheme.archive.yaml
@@ -186,7 +186,7 @@ definitions:
                           component: StringEditQuantity
                       description: |
                         Type of the signal either in voltage or current.
-                    lockin_current_flip_sign:
+                    flip_sign:
                       type: np.float64
                       m_annotations:
                         eln:
@@ -198,13 +198,13 @@ definitions:
                         yields two possible solutions, this number should be equal to 1 or -1
                         depending on which solution is chosen (this concept mainly used in 
                         STS experiments, e.g. in Nanonis machine).
-              scan_environment:
+              Scan_environment:
                 section:
                   m_annotations:
                     eln:
                       overview: true
                   quantities:
-                    tip_temp:
+                    head_temperature:
                       type: np.float64
                       unit: kelvin
                       m_annotations:
@@ -212,10 +212,9 @@ definitions:
                           component: NumberEditQuantity
                           defaultDisplayUnit: K
                       description: |
-                        Temperature of STM head. Note: At least one field from tip_temp,
-                        cryo_bottom_temp and cryo_shield_temp must be provided.
-                        At least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp must be provided.
-                    cryo_bottom_temp:
+                        Temperature of STM head. Note: At least one field from head_temperature,
+                        cryo_bottom_temperature and cryo_shield_temperature must be provided.
+                    cryo_bottom_temperature:
                       type: np.float64
                       unit: kelvin
                       m_annotations:
@@ -224,8 +223,8 @@ definitions:
                           defaultDisplayUnit: K
                       description: |
                         Temperature of the cold tail of the cryostat. Note: 
-                        At least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp must be provided.
-                    cryo_shield_temp:
+                        At least one field from head_temperature, cryo_bottom_temperature and cryo_shield_temperature must be provided.
+                    cryo_shield_temperature:
                       type: np.float64
                       unit: kelvin
                       m_annotations:
@@ -234,7 +233,7 @@ definitions:
                           defaultDisplayUnit: K
                       description: |
                         Temperature of liquid nitrogen shield. Note: At
-                        least one field from tip_temp, cryo_bottom_temp and cryo_shield_temp.
+                        least one field from head_temperature, cryo_bottom_temperature and cryo_shield_temperature must be provided.
         Sample:
           section:
             m_annotations:
@@ -296,7 +295,7 @@ definitions:
                           component: StringEditQuantity
                       description: |
                         Name of the sample component.
-                    sample_id:
+                    identifier_component:
                       type: str
                       m_annotations:
                         eln:
@@ -334,16 +333,32 @@ definitions:
                           component: RichTextEditQuantity
                       description: |
                         Description of the sample component or sample preparation.
-              History:
+              history:
                 section:
                   m_annotations:
                     eln:
                       overview: true
+                  sub_sections:
+                    Note:
+                      section:
+                        m_annotations:
+                          eln:
+                            overview: true
+                        description: |
+                          Notes about the sample history.
+                        quantities:
+                          description:
+                            type: str
+                            m_annotations:
+                              eln:
+                                component: RichTextEditQuantity
+                            description: |
+                              Title of an image or other details of the note.                          
                   quantities:
-                    notes:
+                    identifier_history:
                       type: str
                       m_annotations:
                         eln:
-                          component: RichTextEditQuantity
+                          component: StringEditQuantity
                       description: |
-                        Notes about the sample history.
+                        Identifier for sample history.
