--- a/tests/data/nanonis/stm/version_gen_5e_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/stm/version_gen_5e_with_described_nxdata/eln_data.yaml
@@ -12,20 +12,20 @@ Instrument:
 Sample:
   History:
     Note:
-      description: '<p>Demo description: This sample is used in Palma''s lab.</p>'
+      description: "Demo description: This sample is used in Palma's lab."
   Sample_component:
     chemical_formula: Au(KAl3Si3O12H2)
-    description: <p>A demo experiment on a sample Au(Mica).</p>
+    description: A demo experiment on a sample Au(Mica).
     name: Au(Mica)
   name: diPAMY
 default: current_forward
 definition: NXstm
-experiment_description: <p>An demo example&nbsp;</p>
+experiment_description: An demo example
 experiment_technique: STM
 identifier_collection: D:\\DATA\\nanonis V45_sessions\\Zurich PLL\\2023-03-31
 identifier_experiment: D:\\DATA\\nanonis V45_sessions\\Zurich PLL\\2023-03-31\\2023_03_31_oAu(111)__FeBr2_EP1_018.sxm
 scan_mode: constant height
-user:
+User:
   affiliation:
   - Dr. Cojal González, José David (HU)
   - Prof. Carlos-Andres Palma (HU)
