--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   UV_SYSTEM_PYTHON: true
-  
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ["3.10", "3.11", "3.12"]
-        pynxtools_versions: ["master", "newVersionSPM"]
+        pynxtools_versions: ["master"]
 
     steps:
       - uses: actions/checkout@v4
