--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,9 @@ nav:
       - tutorials/reader-use-in-nomad.md
   - How-To-Guide : 
       - how-to-guides/how-to-interact-with-reader.md
+      - how-to-guides/how-to-extend-readers.md
   - Reference: 
-      - reference/reference.md
+      - reference/transfer-raw-data.md
 plugins:
   # - mkdocstrings
   # - mermaid2
