--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,30 +2,25 @@ name: linting
 
 on: [push]
 
+env:
+  python-version: 3.12      
+
 jobs:
   linting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - name: Install uv and set the python version to ${{ env.python-version }}
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
-      - name: Install dependencies
+          python-version: ${{ env.python-version }}
+      - name: Install package and dev dependencies
         run: |
-          git submodule sync --recursive
-          git submodule update --init --recursive --jobs=4
-          python -m pip install --upgrade pip
-      - name: Install package
-        run: |
-          python -m pip install --no-deps .
-      - name: Install requirements
-        run: |
-          python -m pip install -r dev-requirements.txt
-      - name: ruff
+          uv pip install ".[dev]"
+      - name: ruff check
         run: |
           ruff check src/pynxtools_spm tests
-      - name: ruff formatting
+      - name: ruff format
         run: |
           ruff format --check src/pynxtools_spm tests
       - name: mypy
