--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,28 +1,58 @@
-name: Build Docs
+name: build_and_deploy_mkdocs
+
 on:
   push:
     branches:
-      - main
+      - ReshapeDocs # Triggers deployment on push to the master branch
+
+env:
+  python-version: 3.12
+
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@v5
+
+      # - name: Check spelling
+      #   uses: streetsidesoftware/cspell-action@v7
+      #   with:
+      #     files: |
+      #       docs/**/*.md
+      #       README.md
+      #     strict: true
+      #     incremental_files_only: false
+
+      - name: Install uv and set the python version to ${{ env.python-version }}
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - uses: actions/cache@v4
+          python-version: ${{ env.python-version }}
+
+      - name: Cache mkdocs-material environment
+        uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install .[docs]
-      - run: mkdocs gh-deploy --force
+
+      - name: Install Dependencies
+        run: |
+          uv pip install ".[docs]"
+
+      - name: Build and Deploy
+        run: |
+          mkdocs gh-deploy --force --remote-branch gh-pages
