--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -3,7 +3,7 @@ name: build_and_deploy_mkdocs
 on:
   push:
     branches:
-      - ReshapeDocs # Triggers deployment on push to the master branch
+      - ReshapeDocs
 
 env:
   python-version: 3.12
