--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs
+name: build_and_deploy_mkdocs
 
 on:
   push:
@@ -10,7 +10,6 @@ env:
 
 permissions:
   contents: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,30 +17,18 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
 
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
-      # - name: Check spelling
-      #   uses: streetsidesoftware/cspell-action@v7
-      #   with:
-      #     files: |
-      #       docs/**/*.md
-      #       README.md
-      #     strict: true
-      #     incremental_files_only: false
-
       - name: Install uv and set the python version to ${{ env.python-version }}
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ env.python-version }}
 
-      - name: Cache mkdocs-material environment
+      - name: Cache mkdocs-material enviroment
         uses: actions/cache@v3
         with:
           key: mkdocs-material-${{ env.cache_id }}
