--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ dependencies = [
     "mkdocs-mermaid2-plugin",
     "mkdocstrings",
     "mkdocs-material",
-    "mkdocs-macros-plugin"
+    "mkdocs-macros-plugin",
+    "mkdocs-simple-hooks"
 ]
 
 # TODO: Add acknowledgements to pySPM python package
@@ -57,7 +58,8 @@ docs = [
     "mkdocs-mermaid2-plugin",
     "mkdocstrings",
     "mkdocs-material",
-    "mkdocs-macros-plugin"
+    "mkdocs-macros-plugin",
+    "mkdocs-simple-hooks",
 ]
 
 [project.entry-points."pynxtools.reader"]
